scripts/nullaway/annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8.txt
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:15: error: [NullAway] @NonNull field curPos not initialized
    protected Position curPos;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:66: error: [NullAway] dereferenced expression lastMovedDistance is @Nullable
        for (int i = 0; i < lastMovedDistance.number+1; i++) {
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Exp.java:28: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/IfThenElse.java:19: error: [NullAway] initializer method does not guarantee @NonNull field elseStmtList (line 17) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public IfThenElse(BooleanExp boolE, Stmt[] ifStmtList) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:50: error: [NullAway] unboxing of a @Nullable value
       return result;
              ^
    (see http://t.uber.com/nullaway )
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Robot.java:72: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return varDecls.get(ident);
        ^
    (see http://t.uber.com/nullaway )
6 errors
